src/objects/loan__Commission_Plan__c.object
<CustomObject>
    <fields>
        <fullName>loan__Buy_Rate__c</fullName>
        <description>Percent Rate for Commission</description>
        <inlineHelpText>Percent Rate for Commission</inlineHelpText>
        <label>Buy Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Calculation_Method__c</fullName>
        <description>Method of how commission will be calculated.</description>
        <inlineHelpText>Method of how commission will be calculated</inlineHelpText>
        <label>Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Of Financed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Commission_Disbursement_Method__c</fullName>
        <description>Method how commission will be disbursed to broker.</description>
        <inlineHelpText>Method how commission will be disbursed to broker.</inlineHelpText>
        <label>Commission Disbursement Method</label>
        <picklist>
            <picklistValues>
                <fullName>Upfront</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront at month end</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay as received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the commission plan enabled.</description>
        <inlineHelpText>If the commission plan enabled.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>If the calculation method is percentage of loan amount or spread, then this will be used while calculating the commission amount</description>
        <inlineHelpText>If the calculation method is percentage of loan amount or spread, then this will be used while calculating the commission amount</inlineHelpText>
        <label>Factor</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Flat_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Flat Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Commission_Percentage__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The maximum percentage of commission can be given</description>
        <inlineHelpText>The maximum percentage of commission can be given</inlineHelpText>
        <label>Maximum Commission Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Plan_Description__c</fullName>
        <description>Description of Commission Plan</description>
        <inlineHelpText>Description of Commission Plan.</inlineHelpText>
        <label>Plan Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Upfront_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage of commission which will be disbursed to broker upfront.</description>
        <inlineHelpText>Percentage of commission which will be disbursed to broker upfront.</inlineHelpText>
        <label>Upfront Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Commission Plan</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Commission Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Flat_Rate_Validation</fullName>
        <active>true</active>
        <description>With commission calculation method as Flat ensure that factor has to be equal to 100%.</description>
        <errorConditionFormula>ISPICKVAL(loan__Calculation_Method__c , &apos;Flat Amount&apos;) &amp;&amp; (loan__Factor__c != 1.00 )</errorConditionFormula>
        <errorMessage>With commission calculation method as flat the factor has to be equal to 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Validate_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>((loan__Upfront_Percentage__c &gt; 1)||(loan__Maximum_Commission_Percentage__c &gt;1)||(loan__Factor__c&gt;1))</errorConditionFormula>
        <errorMessage>Upfront %, Max Commission % or Factor cannot be more than 100.00%</errorMessage>
    </validationRules>
</CustomObject>